--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
@@ -16,3 +16,19 @@
   padding: 70px 0 64px 0;
   margin-bottom: -90px;
 }
+
+.yith-woocommerce-ajax-product-filter {
+  a {
+    text-transform: uppercase;
+    color: #4c4c4c;
+  }
+  .chosen a {
+    color: #d8120f;
+  }
+}
+
+.price_slider_amount {
+  button {
+    color: #4c4c4c !important;
+  }
+}
