--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
@@ -17,6 +17,7 @@
     a {
       width: 74px;
       display: block;
+      transition: all .2s ease;
       img {
         display: block;
       }
