--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_archive-product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_archive-product.scss
@@ -87,6 +87,12 @@
     }
 }
 
+.products {
+  .product-title {
+    font-size: 16px !important;
+  }
+}
+
 .product-layout-list {
     .product {
         position: relative;
@@ -116,7 +122,7 @@
             margin-left: calc(25% + 30px);
             .product-title {
                 padding-bottom: 10px;
-                font-size: 24px;
+                font-size: 16px;
                 letter-spacing: 0;
             }
             .woocommerce-product-rating {
