--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
@@ -22,7 +22,7 @@ body.boxed {
         padding-left: 20px;
         padding-right: 20px;
     }
-    padding: 26px 0;
+    padding: 106px 0 40px 0;
     .navigation-product {
         position: relative;
         @extend %transition;
@@ -135,7 +135,7 @@ body.boxed {
             right: 25px;
             bottom: 25px;
             z-index: 99999;
-            opacity: 0;
+            opacity: 1;
             background-color: #57585C;
             width: 40px;
             height: 40px;
