--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -6108,7 +6108,7 @@ Copyright (c) 2015 Daniel Eden
   src: url("../fonts/30E28C_7_0.eot?#iefix") format("embedded-opentype"), url("../fonts/30E28C_7_0.woff2") format("woff2"), url("../fonts/30E28C_7_0.woff") format("woff"), url("../fonts/30E28C_7_0.ttf") format("truetype"); }
 
 .gibson-light, h1, h5, p, span:not([class^='icon-']):not([class*='icon-']):not([class^='slick-']):not([class*='slick-']):not(.menu-item-text):not([class^="pe-7s"]):not([class*="pe-7s"]), .site-footer .menu li a, .site-footer input[type=email], #customer_login .register-sub-header, #customer_login .login .lost_password a,
-#customer_login .register .lost_password a, .duck-collection-header .page-title, #duck-front-page #sunglasses-section .sunglasses-section_main .container h1, #duck-front-page #sunglasses-section .sunglasses-section_main .sidebar h1, .duck-slider-caption h3, .duck-slider-caption p {
+#customer_login .register .lost_password a, .duck-collection-header .page-title, #duck-front-page #sunglasses-section .sunglasses-section_main .container h1, #duck-front-page #sunglasses-section .sunglasses-section_main .sidebar h1, .blog-slider-caption h1, .duck-slider-caption h3, .duck-slider-caption p {
   font-family: 'Gibson-Light', arial, sans-serif !important; }
 
 .gibson-regular, body,
@@ -11492,7 +11492,7 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
     background: #d8d8d8;
     margin: 100px 0 180px 0;
     position: relative;
-    padding: 250px 0 350px 0;
+    padding: 250px 0 200px 0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; }
@@ -11542,6 +11542,17 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
         transform: translate(-50%, 0);
         color: white;
         border: 1px solid white; }
+    #duck-front-page #sunglasses-section .sunglasses-section_main .sunglasses-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; }
+      #duck-front-page #sunglasses-section .sunglasses-section_main .sunglasses-video video {
+        width: 100%; }
 
 #duck-front-page .front-page-instagram {
   margin: 100px 0 60px 0; }
@@ -11592,6 +11603,15 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
     margin: 0 0 10px 0; }
   .duck-blog article .blog-meta-footer {
     margin: 30px 0 0 0; }
+
+.blog-slider-caption h1 {
+  font-size: 42px !important;
+  text-transform: uppercase;
+  color: #fff !important;
+  white-space: nowrap;
+  transition: all .2s ease; }
+  .blog-slider-caption h1:hover {
+    color: rgba(216, 18, 15, 0.5) !important; }
 
 .tp-bullet {
   width: 8px !important;
