--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -60,7 +60,7 @@
       background: #d8d8d8;
       margin: 100px 0 180px 0;
       position: relative;
-      padding: 250px 0 350px 0;
+      padding: 250px 0 200px 0;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -111,6 +111,19 @@
           @include centre(x);
           color: white;
           border: 1px solid white;
+        }
+      }
+      .sunglasses-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        video {
+          width: 100%;
         }
       }
     }
