--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_blog.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_blog.scss
@@ -33,7 +33,7 @@
     text-transform: uppercase;
     color: #fff !important;
     white-space: nowrap;
-    transition: all .2s ease;
+    transition: all .2s ease !important;
     &:hover {
       color: rgba(216, 18, 15, 0.5) !important;
     }
